omod/src/main/compass/sass/mirebalais.scss
@import "base";

header {
  position: relative;
  background-color: $highlight;
  color: #CCC;
  @include border-radius(5px);

  a, a:visited, a:hover, a:link {
    color: white;
  }

  h1 {
    color: #FFF;
    margin: 0;
    padding: 10px
  }

  .logo {
    float: left;
    margin: 4px;
    img {
      width: 120px;
    }
  }

  .user-options {
    text-align: right;

    li {
      display: inline-block;
      margin: 10px 0 10px 20px;

      &.change-location, &.logout {
        color: white;
      }

      &.change-location {
        border: 1px solid lighten($highlight, 5%);
        @include border-radius(3px);

        a {
          display: block;
        }

        &:hover, .focus {
          background: lighten($highlight, 5%);

          a:hover {
            text-decoration: none;
          }
        }
      }
    }
  }
  #session-location {
    position: absolute;
    display: none;
    top: 60px;
    left: 70px;
    background: white;
    border: 2px solid lighten($highlight, 5%);
    @include border-radius(3px);
    width: 853px;
    font-size: 0.8em;
    z-index: 1;

    li {
      width: 239px;
    }
  }
}


.ui-tabs {
  border: none;
  padding: 0;
  ul {
    border: none;
    background: none;
    color: $text;
    @include border-radius(0);
  }
  .ui-tabs-nav {
    padding: 0;
    border-bottom: 1px solid #DDD;
    li {
      @include border-radius(0);
      border-color: #DDD;
      background: #F9F9F9;
      margin: 0 5px 0 0;
      font-family: "OpenSansBold";
      &.ui-tabs-active {
        background: white;
        a, a:link, .ui-state-default {
          border-top: 2px solid $text;
          margin: -1px;
          color: $text;
          &:hover {
            color: $text;
          }
        }
      }
    }
  }
  .ui-tabs-panel {
    padding: 5px;
    border: 1px solid #DDD;
    border-top: none;
  }
}


//archives-room
.box-align {
  display: inline-block;
  vertical-align: top;
  width: 44%;

  &.btn{
    margin-top: 85px;
    text-align: center;
    width: 11%;

    i{
      line-height: 1.1em;
    }

    span{
      display: block;
      font-size: 0.9em;
    }

  }
}

.sending-records {
  padding: 10px;
  border: 1px solid #eee;
  margin: 20px 0;
  h2 {
    margin: 0px;
  }

}

